<resources>
    <string name="app_name">Travelmantics</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price">Price In Ksh. (Numbers Only)</string>
    <string name="save_menu">Save</string>
    <string name="title_activity_list">Travel Deals</string>
    <string name="deal_image">Deal Image</string>
    <string name="title_activity_deal">Deals</string>
    <string name="delete">Delete</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="logout">Logout</string>
    <string name="upload_image">Upload Image</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_practice">Practice</string>
    <string name="connecting">Connecting .....</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="waiting_for_network">Waiting For Network .....</string>
    <string name="error_text">You\'re Offline. Check Your Connection And Retry. \n Or Wait For Auto Refresh.</string>
    <string name="retry">Retry</string>
    <string name="close">close</string>
</resources>
